<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/valueText"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"
        />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/oneN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textColor="@color/Black"
        />
    <Button
        android:id="@+id/twoN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:textColor="@color/Black"
        />
    <Button
        android:id="@+id/threeN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:textColor="@color/Black"
        />
    <Button
        android:id="@+id/plusOp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textColor="@color/Black"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/fourN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textColor="@color/Black"
            />
        <Button
            android:id="@+id/fiveN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:textColor="@color/Black"
            />
        <Button
            android:id="@+id/sixN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:textColor="@color/Black"
            />
        <Button
            android:id="@+id/minusOp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textColor="@color/Black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/sevenN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:textColor="@color/Black"
            />
        <Button
            android:id="@+id/eightN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:textColor="@color/Black"
            />
        <Button
            android:id="@+id/nineN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:textColor="@color/Black"
            />
        <Button
            android:id="@+id/multiOp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mutliple"
            android:textColor="@color/Black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/clearB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textColor="@color/Black"
            />
        <Button
            android:id="@+id/zeroN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/Black"
            />
        <Button
            android:id="@+id/equalOp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equal"
            android:textColor="@color/Black"
            />
        <Button
            android:id="@+id/divisionOp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:textColor="@color/Black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/advance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:text="@string/bText"
            android:textColor="@color/Black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/historyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="25sp"
            />
    </LinearLayout>
</LinearLayout>
</LinearLayout>